# Space_invaders-game

./: config.py  main.py  pyproject.toml
game/: __main__.py  config.py  groups.py  main_menu.py
game/sprites/: alien.py  bullet.py  player.py
game/ui/: button.py  text.py
