[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Horrorzero <YOUR_EMAIL>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "EM", "FA", "ISC", "ICN", "INP", "PIE", "PYI", "Q", "SIM", "PTH", "PL", "TRY",
]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

